src/test/compile-fail/restricted-keyword1.rs
// error-pattern:found `let` in binding position

fn main() {
    alt true {
      {let} { }
    }
}
